# vibetrade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: db-analyst.md  entry-agent.md  reeval-agent.md
.claude/skills/vibetrade-agent-loop/: SKILL.md
.opencode/agents/: db-analyst.md
config/: config.example.yaml  config.yaml  test-config.yaml
docs/: comparison_report.md  session-2026-07-20.md
migrations/: env.py
migrations/versions/: 0bc68d81f3da_add_market_context_snapshots.py  476939c77bf1_initial.py  c1a2b3d4e5f6_add_filtered_signals.py
scripts/: agent_actions.py  agent_briefing.py  agent_data.py  analyze_missed_signals.py  analyze_performance.py  backtest_sweep.py  sweep_focused.py  sweep_rr_sl.py  test_blowoff_filter.py  test_improved_filters.py
src/: config.py  main.py
src/agent/: decision_agent.py  tools.py
src/analytics/: base.py  data_provider.py  detector.py  market_context.py  price_surge.py  price_surge_service.py  utils.py
src/backtest/: loader.py  runner.py
src/collectors/: market_data.py
src/connectors/: exchange.py
src/core/: app.py
src/executor/: agent_position_manager.py  position_manager.py
src/notifier/: telegram_bot.py
src/storage/: database.py  models.py  stats.py
tests/: test_agent.py  test_data_provider.py  test_detector.py  test_position_manager.py
