[project]
name = "trading-bot"
version = "0.1.0"
description = "Торговый советчик: сканирование метрик, детекция сетапов, сигналы в Telegram"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "aiogram>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "pandas>=2.0",
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
